<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".ui.auth.register.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/include"
            layout="@layout/base_tapbar_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/register_left"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/margin_24" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/register_right"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/margin_24" />

        <EditText
            android:id="@+id/et_register_email"
            android:layout_width="@dimen/fill_layout"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:background="@drawable/bg_round_border_gray_4"
            android:hint="@string/hint_id"
            android:inputType="textEmailAddress"
            android:paddingVertical="@dimen/padding_16"
            android:paddingStart="@dimen/padding_16"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_700"
            android:textSize="@dimen/text_size_18"
            app:layout_constraintEnd_toStartOf="@+id/register_right"
            app:layout_constraintStart_toStartOf="@+id/register_left"
            app:layout_constraintTop_toBottomOf="@+id/include"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/et_register_pw"
            android:layout_width="@dimen/fill_layout"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:background="@drawable/bg_round_border_gray_4"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingVertical="@dimen/padding_16"
            android:paddingStart="@dimen/padding_16"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_700"
            android:textSize="@dimen/text_size_18"
            app:layout_constraintEnd_toStartOf="@+id/register_right"
            app:layout_constraintStart_toStartOf="@+id/register_left"
            app:layout_constraintTop_toBottomOf="@+id/tv_register_email_err"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/et_register_pw_confirm"
            android:layout_width="@dimen/fill_layout"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:background="@drawable/bg_round_border_gray_4"
            android:hint="@string/password_confirm"
            android:inputType="textPassword"
            android:paddingVertical="@dimen/padding_16"
            android:paddingStart="@dimen/padding_16"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_700"
            android:textSize="@dimen/text_size_18"
            app:layout_constraintEnd_toStartOf="@+id/register_right"
            app:layout_constraintStart_toStartOf="@+id/register_left"
            app:layout_constraintTop_toBottomOf="@+id/tv_register_pw_err"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tv_register_email_err"
            android:layout_width="@dimen/fill_layout"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:text="@string/wrong_type_email"
            android:textColor="@color/red_800"
            android:textSize="@dimen/text_size_12"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@+id/register_right"
            app:layout_constraintStart_toStartOf="@+id/register_left"
            app:layout_constraintTop_toBottomOf="@+id/et_register_email" />

        <TextView
            android:id="@+id/tv_register_pw_err"
            android:layout_width="@dimen/fill_layout"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:text="@string/wrong_pw_type"
            android:textColor="@color/gray_700"
            android:textSize="@dimen/text_size_12"
            app:layout_constraintEnd_toStartOf="@+id/register_right"
            app:layout_constraintStart_toStartOf="@+id/register_left"
            app:layout_constraintTop_toBottomOf="@+id/et_register_pw" />

        <TextView
            android:id="@+id/tv_register_pw_confirm_err"
            android:layout_width="@dimen/fill_layout"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:text="@string/not_match_pw"
            android:textColor="@color/red_800"
            android:textSize="@dimen/text_size_12"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@+id/register_right"
            app:layout_constraintStart_toStartOf="@+id/register_left"
            app:layout_constraintTop_toBottomOf="@+id/et_register_pw_confirm" />

        <ImageView
            android:id="@+id/iv_register_email_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8"
            android:padding="@dimen/margin_8"
            android:src="@drawable/ic_cancel"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/et_register_email"
            app:layout_constraintEnd_toStartOf="@+id/register_right"
            app:layout_constraintTop_toTopOf="@+id/et_register_email" />

        <ImageView
            android:id="@+id/iv_register_pw_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8"
            android:padding="@dimen/padding_8"
            android:src="@drawable/ic_cancel"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/et_register_pw"
            app:layout_constraintEnd_toStartOf="@+id/register_right"
            app:layout_constraintTop_toTopOf="@+id/et_register_pw" />

        <ImageView
            android:id="@+id/iv_register_pw_confirm_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8"
            android:padding="@dimen/padding_8"
            android:src="@drawable/ic_cancel"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/et_register_pw_confirm"
            app:layout_constraintEnd_toStartOf="@+id/register_right"
            app:layout_constraintTop_toTopOf="@+id/et_register_pw_confirm" />

        <TextView
            android:id="@+id/btn_register_next"
            android:layout_width="@dimen/fill_layout"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_20"
            android:background="@drawable/btn_selector"
            android:enabled="false"
            android:gravity="center"
            android:paddingVertical="@dimen/padding_16"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/register_right"
            app:layout_constraintStart_toStartOf="@+id/register_left"
            app:layout_constraintTop_toBottomOf="@+id/tv_register_pw_confirm_err"
            app:layout_constraintVertical_bias="0.9" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>