...
        <action
            android:id="@+id/action_auth_to_policy_dialog"
            app:destination="@+id/nav_dialog_policy" />

        <action
            android:id="@+id/action_auth_to_register"
            app:destination="@+id/nav_auth_register"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <action
...
            app:destination="@+id/main"
            app:popUpTo="@id/nav_auth_home"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_auth_home_to_auth_nick_name"
            app:destination="@id/nav_auth_nick_name"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_auth_to_permission"
...
